# CC_Testbed

./: .gitignore  README.md
Application/: CMakeLists.txt  README.md  build.sh
Application/cfg/: setup_defines.json  w2rp_config_down.json  w2rp_config_up.json
Application/include/roaming/: colorWidget.hpp  frameDisplayWidget.hpp  img_config.hpp  linkMonitorGUI.hpp  linkMonitorWidget.hpp  misc.hpp  publisher.hpp  subscriber.hpp  uplinkWidget.hpp
Application/src/accessPoint/downlink/: accessPointGUI_down.cpp  accessPoint_down.cpp
Application/src/accessPoint/uplink/: accessPoint_up.cpp
Application/src/mobileNode/downlink/: mobileNodeGUI_down.cpp  mobileNode_down.cpp
Application/src/mobileNode/uplink/: mobileNode_up.cpp
JetsonBuild/: README.md
JetsonBuild/scripts/: nv_set_cross_compile.sh
TruckControl/mycar/: config.py  manage.py  myconfig.py
docs/: dfg_logo_weiss.afdesign
drivers/wifi_drivers/: overview_open_source_driver_solutions.xlsx
drivers/wifi_drivers/ath9k/: README.md  regd_patch.patch
scripts/backbone/: ap_forwarding.sh  edge_forwarding.sh  mobile_forwarding.sh
scripts/pi_truck/: RecordUSB.desktop  START_DONKEYCAR.desktop  START_DONKEYCAR.sh  START_USB.sh  internet_forwarding.sh  recordUSB.py
scripts/ptp/: init_ptpd.py
scripts/wireless/: startAP.py  startAdhoc.py  startClient.py  wireless_node.py
scripts/wireless/adhoc_mode/: network.json
scripts/wireless/ap_mode/: helper.py  hostapd_default.conf  network.json
